added directions for tonkatsu recipe

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "Aonori",
         "dashi",
         "Katsuobushi",
+        "Nikujaga",
         "Okonomiyaki",
         "Panko",
         "tenkasu",
